<resources>
    <string name="app_name">Inari</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stats_card_1">C/No vs Elevation</string>
    <string name="stats_card_2">AGC vs C/No</string>
    <string name="stats_card_3">Map</string>
    <string name="stats_card_4">Number of\nsatellites</string>
    <string name="stats_card_5">Code minus\nCarrier</string>
    <string name="stats_card_6">GDOP</string>
    <string name="save_log">Do you want to save the logs?</string>
    <string name="filename">Enter file name</string>
    <string name="file_format">File format:</string>
    <string name="rinex">RINEX</string>
    <string name="nma">NMA</string>
    <string name="save">save</string>
    <string name="new_mode">New mode</string>
    <string name="mode_name">Mode name</string>
    <string name="stop_button">Stop</string>
    <string name="save_button">save</string>
    <string name="see_modes_button">see modes</string>
    <string name="constellations_subtitle">Constellations:</string>
    <string name="bands_subtitle">Bands:</string>
    <string name="corrections_subtitle">Corrections:</string>
    <string name="algorithm_subtitle">Algorithm:</string>
    <string name="averaging_subtitle">Averaging\n\t time:</string>
    <string name="CN0_strip_title">Average C/No (dB-Hz):</string>
    <string name="num_sats_title">Number of satellites:</string>
    <string name="pdop_title">PDOP:</string>
    <string name="cn0_title">C/N0:</string>
    <string name="hvdop_title">H/V DOP:</string>
    <string name="save_results">Save results</string>
    <string name="see_results">See results</string>
    <string name="position_bottom">Position</string>
    <string name="gnss_state_bottom">GNSS state</string>
    <string name="statistics_bottom">Statistics</string>
    <string name="gps_lat_lon_dms_value">%1$d\u00B0 %2$d\' %3$d\"</string>
    <string name="legend">LEGEND</string>
    <string name="reset">RESET</string>
    <string name="gnss_settings_title">GNSS Settings</string>
    <string name="apply">Apply</string>
    <string name="constellations_title">CONSTELLATIONS</string>
    <string name="bands_title">BANDS</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at sapien nec nibh dictum
        posuere quis eu lectus. Integer volutpat felis a enim vestibulum eleifend. Mauris scelerisque, nibh sed laoreet
        tempus, nunc est vehicula enim, eget lacinia enim velit a odio. Proin lectus felis, tincidunt a porttitor sed,
        posuere sed justo. Aenean vitae quam sit amet nulla tempor tristique. Proin bibendum eros eu velit vestibulum
        ultrices. Aliquam tristique accumsan metus quis rutrum. Vivamus ut eros malesuada, euismod mi ac, molestie
        tortor. Pellentesque dapibus ex at quam elementum, non porttitor elit elementum. Suspendisse tempus, mauris in
        ullamcorper auctor, diam massa porttitor nibh, eget laoreet lectus dui in nulla. Ut vitae blandit erat.\n\n

        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus scelerisque
        facilisis elit eu gravida. Etiam venenatis libero sit amet ipsum efficitur, vitae tempus nulla luctus. Duis ut
        semper ex. Aenean sagittis mollis massa, sed aliquam ex porta non. Donec eleifend lorem vitae velit malesuada
        vehicula vel cursus nunc. Curabitur vehicula fermentum arcu, sed pulvinar tortor malesuada quis.
    </string>
    <string name="modes">Modes</string>
    <string name="start_computing">Start Computing</string>
    <string name="stop_computing">Stop Computing</string>
    <string name="sky_legend_cno_low">10</string>
    <string name="sky_legend_cno_low_middle">18</string>
    <string name="sky_legend_cno_middle">27</string>
    <string name="sky_legend_cno_middle_high">36</string>
    <string name="sky_legend_cno_high">45</string>
    <string name="sky_legend_shape_navstar">GPS (USA)</string>
    <string name="sky_legend_shape_galileo">Galileo (EU)</string>
    <string name="band_l1">L1</string>
    <string name="band_l5">L5</string>
    <string name="band_e1">E1</string>
    <string name="band_e5a">E5a</string>
    <string name="about_bottom">About</string>
    <string name="logs_bottom">Logs</string>
    <string name="positioning_settings">Positioning Settings</string>
    <string name="clear_button">Clear</string>
    <string name="cnoAxisTitle">CN0 [dB-Hz]</string>
    <string name="avgCnoAxisTitle">Average CN0 [dB-Hz]</string>
    <string name="agcAxisTitle">Average AGC [dB]</string>
    <string name="elevAxisTitle">Elevation [º]</string>
    <string name="app_version_title">App version:</string>
    <string name="app_version_number">1.0.0</string>
    <string name="contact_title">Contact:</string>
    <string name="contact_email">inariteamapp@gmail.com</string>
    <string name="developed_by_title">Developed by:</string>
    <string name="inari_team">inari team</string>
    <string name="composed_by_title">Composed by:</string>
    <string name="team_composers">Albert Becerra Hervás\nAlejandro Pérez Conesa\nAlfonso Amayuelas Fernández\nArnau Ochoa Bañuelos\nJoan M. Bernabeu Frias</string>
    <string name="advisored_by_title">Advisored by:</string>
    <string name="advisors">Daniel Egea Roca \nJosé A. del Peral Rosado</string>
    <string name="see_tutorial_text">See tutorial</string>
    <string name="developed_in_uab_title">Developed in \nUniversitat Autònoma \nde Barcelona</string>
    <string name="supported_by_the_neuropean_space_agency">Supported by the \nEuropean Space Agency</string>
    <string name="eastAxisTitle">East [m]</string>
    <string name="northAxisTitle">North [m]</string>
    <string name="reset_default_modes">Reset default modes</string>
    <string name="finish">finish</string>

    <!-- Statistics -->
    <string name="agc_cno_information_detail">The relation of AGC and CN0 is relatively constant and known and when there is some abnormal situation, this relation will change. This relation can be seen on the chart so that the points appear on another place of the graphic. For example, if there is some RF interference the AGC and CN0 will decrease with respect to the values on nominal conditions. This chart shows points representing the average values of AGC and CN0 of all the satellites in view and every new point represents a new set of measurements. </string>
    <string name="elev_cno_information_detail">CN0 depends on the elevation of the satellite so that a higher elevation usually involves a higher CN0. When that relation is not kept, some abnormal situation may be happening, such as multi-path or No-Line-Of-Sight. </string>
    <string name="error_information_detail">This chart shows the error on the obtained positions of the modes that are selected, using the position obtained from Google as a reference. The computation of the position has to be started to see the information on this graph.</string>
    <string name="iono_information_detail">The ionosphere error depends on the elevation of the satellite, becoming smaller when the elevation gets bigger. In order to see the information on this graph, the positioning has to be started with some method that uses Iono-Free corrections.</string>
    <string name="graph_information">Graph Information</string>
    <string name="enable_gnss_logs">Enable GNSS logs</string>
    <string name="average_time_title">Average Time:</string>
    <string name="information">Information</string>

    <!-- Modes information -->
    <string name="elevation_info_title">· Elevation Mask:</string>
    <string name="elevation_info_detail">The satellites under the selected elevation threshold will not be used on the computation.</string>
    <string name="gnss_logs_info_title">· Enable/Disable GNSS Logs:</string>
    <string name="gnss_logs_info_detail">If this option is enabled, two files will be created when a new computation is started. These files contain the measurements and the position logs and can be found on /Inari/Nmea/.</string>
    <string name="cn0_info_title">· CNO mask:</string>
    <string name="cno_info_detail">The satellites which signal has a CN0 lower than the selected threshold will not be used on the computation.</string>
    <string name="avg_info_title">· Average</string>
    <string name="avg_info_detail">This option allows the user to enable or disable averaging and to select its duration.</string>
    <string name="position_info_title">· Positioning modes:</string>
    <string name="position_info_detail">Up to 5 modes can be selected at the same time to compute the position. The positions computed with the selected modes can be identified on the map by the different colors of the pins. A new mode can be created with the desired parameters.</string>

    <string name="enable_recommendation">* It is highly recommended to enable this option.</string>
    <string name="create">create</string>
    <string name="wls">WLS</string>
    <string name="ls">LS</string>
    <string name="algorithm">Algorithm</string>
    <string name="dual_frequency_iono_free">Dual-frequency iono-free</string>
    <string name="asterisk">*</string>
    <string name="troposphere">Troposphere</string>
    <string name="ionosphere">Ionosphere</string>
    <string name="corrections">Corrections</string>
    <string name="bands">Bands</string>
    <string name="constellations">Constellations</string>
    <string name="gps">GPS</string>
    <string name="galileo">Galileo</string>
    <string name="graph_type">Graph Type</string>
    <string name="error_plot">Error plot</string>
    <string name="ionosphere_elevation">Ionosphere/Elevation</string>
    <string name="ionoAxisTitle">Ionosphere error [m]</string>
    <string name="minimum_one_mode_selected_message">Please, select at least one positioning mode to compute the position</string>
    <string name="mode_created_toast">Mode created</string>
    <string name="no_band_toast">Please, select a band to create a new mode</string>
    <string name="no_constellation_toast">Please, select at least one constellation to create a new mode"</string>
    <string name="name_exists_toast">This name already exists</string>
    <string name="no_name_toast">A new mode needs a new name!</string>

</resources>