<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_position"
        android:enabled="true"
        android:icon="@drawable/ic_position"
        android:title="@string/position_bottom"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_status"
        android:enabled="true"
        android:icon="@drawable/ic_satellite"
        android:title="@string/gnss_state_bottom"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_statistics"
        android:enabled="true"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics_bottom"
        app:showAsAction="ifRoom" />
</menu>